fixed: scrollbars in contentTree

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 50px;    
+    height: 50px;
     box-shadow: 0 0 3px rgba(0,0,0,0.5);
     background-color: white;
     z-index: 10;
@@ -121,7 +121,7 @@
     bottom: 14px;
     background-color: white;
     z-index: 9;
-    overflow:scroll;
+    overflow:auto;
     padding-top: 3px;
 }
 .content-element{
